ci: skip most jobs on 'docs:' commits
Since adding the test matrix, our CI has gotten heavy and more prone to
random failures due to network flakiness. This adds unnecessary friction
to docs-only contributions. Since we are using conventional commits,
these should be exactly the commits where the subject line starts with
'docs:'.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ stages:
   - release
 
 include:
+  - local: .gitlab/ci/rules.gitlab-ci.yml
   - local: .gitlab/ci/build.gitlab-ci.yml
   - local: .gitlab/ci/shellcheck.gitlab-ci.yml
   - local: .gitlab/ci/test.gitlab-ci.yml
