--- a/.gitlab/ci/chart.gitlab-ci.yml
+++ b/.gitlab/ci/chart.gitlab-ci.yml
@@ -1,6 +1,5 @@
 variables:
   SAST_DISABLE_DIND: "true"
-  SCAN_KUBERNETES_MANIFESTS: "true"
 
 include:
   - template: SAST.gitlab-ci.yml
@@ -10,6 +9,8 @@ stages:
   - release
 
 .chart-job:
+  extends:
+    - .rules:except-docs
   image: "$BUILD_IMAGE_NAME"
   before_script:
     - cd assets/auto-deploy-app
@@ -20,7 +21,17 @@ chart:lint:
   script:
     - helm lint .
 
+# Redefines kubesec-sast from SAST.gitlab-ci.yml, because using `extends` in a
+# job inherited from a template resets the inheritance chain. I.e. the job will
+# only inherit from the jobs specified in `extends` (not from the template)
 kubesec-sast:
+  extends:
+    - .sast-analyzer
+    - .rules:except-docs
+  image:
+    name: "$SAST_ANALYZER_IMAGE"
+  variables:
+    SAST_ANALYZER_IMAGE: "$SECURE_ANALYZERS_PREFIX/kubesec:$SAST_ANALYZER_IMAGE_TAG"
   variables:
     KUBESEC_HELM_CHARTS_PATH: 'assets/auto-deploy-app'
     KUBESEC_HELM_OPTIONS: '-f assets/auto-deploy-app/values.yaml'
@@ -28,9 +39,6 @@ kubesec-sast:
     - cd assets/auto-deploy-app
     - helm repo add stable https://charts.helm.sh/stable
     - helm dependency build .
-  # we are using merge request pipelines, so we need to override the rules
-  rules:
-    - if: $SCAN_KUBERNETES_MANIFESTS == 'true'
 
 chart:test:
   extends: .chart-job
