ci: fix template tests not running after split
We recently split up the template tests, but they were not actually
running in CI due to to the script using `go test .` instead of the
recursive `go test ./...`. This also fixes some other path-related
problems, namely the relative paths for the fixtures, and that
`test_helpers.go` must be in the same directory as the tests to count as
the same package.

--- a/.gitlab/ci/chart.gitlab-ci.yml
+++ b/.gitlab/ci/chart.gitlab-ci.yml
@@ -51,7 +51,7 @@ chart:test:
     - go version
     - helm repo add stable https://charts.helm.sh/stable
     - helm dependency build .
-    - cd test && GO111MODULE=auto go test .
+    - cd test && GO111MODULE=auto go test ./...
 
 # auto-deploy-image doesn't need to release the chart to https://charts.gitlab.io/,
 # as it bundles a chart by default.
