feat: affinity worker-deployment
Added affinity support in worker-deployment

--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -55,6 +55,12 @@ items:
 {{ toYaml $tolerationsConfig | indent 10 }}
 {{- end }}
 {{- end }}
+{{- with $affinityConfig := default $.Values.affinity $workerConfig.affinity -}}
+{{- if $affinityConfig  }}
+        affinity:
+{{ toYaml $affinityConfig | indent 10 }}
+{{- end }}
+{{- end }}
         terminationGracePeriodSeconds: {{ $workerConfig.terminationGracePeriodSeconds }}
         containers:
         - name: {{ $.Chart.Name }}-{{ $workerName }}
