fix: forgot to support protocol on deployment

--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -93,6 +93,7 @@ spec:
 {{- range .Values.additionalServicePorts }}
         - name: {{ .name }}
           containerPort: {{ .targetPort }}
+          protocol: {{ .protocol }} 
 {{- end}}
 {{- end }}
         livenessProbe:
