chore: added docs and made protocol on deployment port definition optional

--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -93,7 +93,9 @@ spec:
 {{- range .Values.additionalServicePorts }}
         - name: {{ .name }}
           containerPort: {{ .targetPort }}
+          {{- if .protocol }}
           protocol: {{ .protocol }} 
+          {{- end }}
 {{- end}}
 {{- end }}
         livenessProbe:
