--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -152,6 +152,10 @@ workers: {}
   #     timeoutSeconds: 3
   #     scheme: "HTTP"
   #     probeType: "httpGet"
+  #   lifecycle:
+  #     preStop:
+  #       exec:
+  #         command: ["/bin/sh", "-c", "sleep 10"]
   #   preStopCommand:
   #   - /bin/herokuish
   #   - procfile
