--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -64,6 +64,12 @@ items:
 {{ toYaml $affinityConfig | indent 10 }}
 {{- end }}
 {{- end }}
+{{- with $initContainersConfig := default $.Values.initContainers $workerConfig.initContainers -}}
+{{- if $initContainersConfig  }}
+        initContainers:
+{{ toYaml $initContainersConfig | indent 10 }}
+{{- end }}
+{{- end }}
         terminationGracePeriodSeconds: {{ $workerConfig.terminationGracePeriodSeconds }}
         containers:
         - name: {{ $.Chart.Name }}-{{ $workerName }}
