--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,9 @@ workflow:
 variables:
   DOCKER_DRIVER: overlay2
 
-  HELM_VERSION: 3.6.3
-  KUBERNETES_VERSION: 1.17.17
-  ALPINE_VERSION: '3.12'
+  HELM_VERSION: '3.7.1'
+  KUBERNETES_VERSION: '1.20.11'
+  ALPINE_VERSION: '3.14'
   GLIBC_VERSION: 2.31-r0
 
   BUILD_IMAGE_NAME: "$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG:$CI_COMMIT_SHA"
