Debug: print current context

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ stages:
 include:
   - local: .gitlab/ci/rules.gitlab-ci.yml
   - local: .gitlab/ci/build.gitlab-ci.yml
-  - local: .gitlab/ci/shellcheck.gitlab-ci.yml
-  - local: .gitlab/ci/test.gitlab-ci.yml
-  - local: .gitlab/ci/release.gitlab-ci.yml
-  - local: .gitlab/ci/chart.gitlab-ci.yml
+#  - local: .gitlab/ci/shellcheck.gitlab-ci.yml
+#  - local: .gitlab/ci/test.gitlab-ci.yml
+#  - local: .gitlab/ci/release.gitlab-ci.yml
+#  - local: .gitlab/ci/chart.gitlab-ci.yml
