fix: allow --minify to fail w/o current-context
`kubectl config view --minify` needs a current-context
so it can show the information minified. Minify basically means to
remove all data that is not relevant to the current-context.

Since we call `kubectl config view --minify` in the root scope of the
file, every parent process that uses this file to call one of its
functions will endup reexecuting this piece of code. So by allowing
minify to fail when the context is not setup, we allow the user to call
use_kube_context before calling other scripts, which would avoid
breaking the execution.

--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -34,6 +34,24 @@
           echo "Failed as expected and exited with $?"
         }
 
+test-use-kube-context:
+  <<: *test-job
+  variables:
+    KUBE_CONTEXT: default
+  script:
+    # This test that any function will be properly
+    # loaded. Even when calling `kubectl config --minify`
+    # without a current context pre-setup
+    - kubectl config unset current-context
+    - kubectl config get-contexts
+    - auto-deploy use_kube_context
+    - context=$(kubectl config current-context)
+    - |
+      if [[ "$context" != "default" ]]; then
+        echo "Failed to assign context"
+        exit 1
+      fi
+
 test-dependencies:
   <<: *test-job
   variables:
