chore: made changes according to review
Renamed value from additionalServicePorts to service.extraPorts.

--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -98,14 +98,14 @@ spec:
         ports:
         - name: "{{ .Values.service.name }}"
           containerPort: {{ .Values.service.internalPort }}
-{{- if .Values.additionalServicePorts }}
-{{- range .Values.additionalServicePorts }}
-        - name: {{ .name }}
-          containerPort: {{ .targetPort }}
-          {{- if .protocol }}
-          protocol: {{ .protocol }} 
+{{- if .Values.service.extraPorts }}
+{{- range $servicePort := .Values.service.extraPorts }}
+        - name: {{ $servicePort.name }}
+          containerPort: {{ $servicePort.targetPort }}
+          {{- if $servicePort.protocol }}
+          protocol: {{ $servicePort.protocol }} 
           {{- end }}
-{{- end}}
+{{- end }}
 {{- end }}
         livenessProbe:
 {{- if eq .Values.livenessProbe.probeType "httpGet" }}
