--- a/assets/auto-deploy-app/templates/service.yaml
+++ b/assets/auto-deploy-app/templates/service.yaml
@@ -24,6 +24,9 @@ spec:
 {{- if eq .Values.service.type "NodePort" }}
     nodePort: {{ .Values.service.nodePort }}
 {{- end }}
+{{- if .Values.service.extraPorts }}
+{{ toYaml .Values.service.extraPorts | indent 2 }}
+{{- end }}
   selector:
     app: {{ template "appname" . }}
     tier: "{{ .Values.application.tier }}"
