--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -67,7 +67,7 @@ service:
   externalPort: 5000
   internalPort: 5000
   nodePort: 30001
-additionalServicePorts: []
+  extraPorts: []
 ingress:
   enabled: true
   path: "/"
