fix: use $ instead of . in include

--- a/assets/auto-deploy-app/templates/service-account.yaml
+++ b/assets/auto-deploy-app/templates/service-account.yaml
@@ -5,7 +5,7 @@ kind: ServiceAccount
 metadata:
   name: {{ .name | quote }}
   labels:
-{{ include "sharedlabels" . | indent 4 }}
+{{ include "sharedlabels" $ | indent 4 }}
 {{- if .annotations }}
   annotations:
 {{ toYaml .annotations | indent 4 }}
