fix: unset default service.nodePort value
This caused a regression, see
https://gitlab.com/gitlab-org/cluster-integration/auto-deploy-image/-/issues/199

--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -67,7 +67,7 @@ service:
   commonName:
   externalPort: 5000
   internalPort: 5000
-  nodePort: 30001
+  # nodePort: 30001
   extraPorts: []
 ingress:
   enabled: true
