feat: only inject database_url if it is set
Update chart version

Rename application.database_url to application.databaseUrl

Existing name was inconsistent with other values

Add application.databaseUrl documentation

Conditionally inject db url in db jobs and worker

Write tests for application.databaseUrl

Add databaseUrl documentation to values.yaml

Fix spelling mistake in worker deployment

Fix another typo

Put tests in right files

Keep database_url value name

--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -99,8 +99,10 @@ spec:
               name: app-postgres
               key: privateIP
 {{- end }}
+{{- if .Values.application.database_url }}
         - name: DATABASE_URL
           value: {{ .Values.application.database_url | quote }}
+{{- end }}
         - name: GITLAB_ENVIRONMENT_NAME
           value: {{ .Values.gitlab.envName | quote }}
         - name: GITLAB_ENVIRONMENT_URL
