--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -88,8 +88,10 @@ items:
               name: {{ $.Values.application.secretName }}
           {{- end }}
           env:
+{{- if $.Values.application.database_url }}
           - name: DATABASE_URL
             value: {{ $.Values.application.database_url | quote }}
+{{- end }}
           - name: GITLAB_ENVIRONMENT_NAME
             value: {{ $.Values.gitlab.envName | quote }}
           - name: GITLAB_ENVIRONMENT_URL
