--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -32,6 +32,9 @@ application:
   initializeCommand:
   secretName:
   secretChecksum:
+  # You can omit `DATABASE_URL` variable injection into your deployment containers,
+  # if you explicitly set `database_url` to `null`.
+  # database_url: null
 hpa:
   enabled: false
   minReplicas: 1
