--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -72,6 +72,10 @@ spec:
 {{- end }}
 {{- end }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
+{{- if .Values.hostAliases }}
+      hostAliases:
+{{ toYaml .Values.hostAliases | indent 8 }}
+{{- end }}
       containers:
       - name: {{ .Chart.Name }}
         image: {{ template "imagename" . }}
@@ -119,7 +123,7 @@ spec:
         - name: {{ $servicePort.name }}
           containerPort: {{ $servicePort.targetPort }}
           {{- if $servicePort.protocol }}
-          protocol: {{ $servicePort.protocol }} 
+          protocol: {{ $servicePort.protocol }}
           {{- end }}
 {{- end }}
 {{- end }}
