--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -74,6 +74,10 @@ items:
 {{- end }}
 {{- end }}
         terminationGracePeriodSeconds: {{ $workerConfig.terminationGracePeriodSeconds }}
+{{- if $workerConfig.hostAliases }}
+        hostAliases:
+{{ $workerConfig.hostAliases | indent 10 }}
+{{- end }}
         containers:
         - name: {{ $.Chart.Name }}-{{ $workerName }}
           image: {{ template "imagename" $ }}
