--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -80,8 +80,7 @@ ingress:
     acme: true
     secretName: ""
     useDefaultSecret: false
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
+  className: nginx
   modSecurity:
     enabled: false
     secRuleEngine: "DetectionOnly"
