fix: use kubernetes.io/ingress.class when present
It is possible to have an up-to-date cluster, but an outdated ingress
controller. This means that the API networking.k8s.io/v1/Ingress is
available, but no valid ingressClassName exists in the cluster.

See https://gitlab.com/gitlab-org/cluster-integration/auto-deploy-image/-/issues/206

--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -80,7 +80,7 @@ ingress:
     acme: true
     secretName: ""
     useDefaultSecret: false
-  className: nginx
+  # className: nginx
   modSecurity:
     enabled: false
     secRuleEngine: "DetectionOnly"
@@ -90,6 +90,7 @@ ingress:
     #     action: ""
   canary:
     weight:
+  annotations: {}
 prometheus:
   metrics: false
 livenessProbe:
