--- a/assets/auto-deploy-app/templates/ingress.yaml
+++ b/assets/auto-deploy-app/templates/ingress.yaml
@@ -12,8 +12,10 @@ metadata:
   labels:
 {{ include "sharedlabels" . | indent 4 }}
   annotations:
-{{- if not (.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress") }}
-    kubernetes.io/ingress.class: {{ .Values.ingress.className | quote }}
+{{- if not (or (.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress")
+               (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class"))
+}}
+    kubernetes.io/ingress.class: {{ .Values.ingress.className | default "nginx" | quote }}
 {{- end }}
 {{- if .Values.ingress.annotations }}
 {{ toYaml .Values.ingress.annotations | indent 4 }}
@@ -46,8 +48,11 @@ metadata:
 
 {{- end }}
 spec:
-{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
-  ingressClassName: {{ .Values.ingress.className | quote }}
+{{- if and (.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress")
+           (or (hasKey .Values.ingress "className")
+               (not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class")))
+}}
+  ingressClassName: {{ .Values.ingress.className | default "nginx" | quote }}
 {{- end }}
 {{- if .Values.ingress.tls.enabled }}
   tls:
