--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -80,7 +80,7 @@ ingress:
     acme: true
     secretName: ""
     useDefaultSecret: false
-  className: nginx
+  # className: nginx
   modSecurity:
     enabled: false
     secRuleEngine: "DetectionOnly"
